# pyCA

./: README.md  cellular_automaton.py  config.py  life.py  main.py  pyca_qt.py  pyproject.toml  requirements.txt  sand.py
pyca/: cellular_automaton.py  config.py  matrix.py  pyca_qt.py
pyca/cellular_automaton/: base.py  conway_life.py  sand.py
